{
  ":": ":",
  "_": "https://blockstream.info/api/",
  "about_appVersion": "App Version",
  "about_openSourceLicences": "Open Source Licences",
  "about_privacyPolicy": "Privacy Policy",
  "about_show": "Show",
  "about_termsOfUse": "Terms of Use",
  "accountDetails_descriptor_legacy": "Legacy",
  "accountDetails_descriptor_segwit": "Segwit",
  "accountDetails_descriptor_taproot": "Taproot",
  "accountDetails_descriptor_wrappedSegwit": "Wrapped Segwit",
  "account_details_filter_tags_sortBy": "Sort by",
...
  "backups_erase_mobile_wallet": "Erase Mobile Wallet",
  "backups_erase_wallets_and_backups": "Erase Mobile Wallet and Backups",
  "backups_erase_wallets_and_backups_modal_1_2_android_subheading": "You’re about to permanently delete your Envoy Wallet. \n\nIf you are using Magic Backups, your Envoy Seed will also be deleted from Android Auto Backup. ",
  "backups_erase_wallets_and_backups_modal_1_2_ios_subheading": "You’re about to permanently delete your Envoy Wallet.\n\nIf you are using Magic Backups, your Envoy Seed will also be deleted from iCloud Keychain. ",
  "backups_erase_wallets_and_backups_modal_2_2_subheading": "Any connected Passport accounts will not be removed as part of this process.\n\nBefore deleting your Envoy Wallet, let’s ensure your Seed and Backup File are saved.\n",
  "backups_erase_wallets_and_backups_show_seed_CTA": "Show Seed",
  "backups_erase_wallets_and_backups_show_seed_heading": "Keep Your Seed Private",
  "backups_erase_wallets_and_backups_show_seed_subheading": "Remember to always keep your seed words private. Anyone with access to this seed can spend your Bitcoin!",
  "backups_magicToManualErrorModal_header": "Unable to Continue",
  "backups_magicToManualErrorModal_subheader": "Envoy Magic Backup cannot be disabled while a Passport Prime Magic Backup is active.\n\nTo continue, first disable the Passport Prime Magic Backup on device.",
  "backups_manualToMagicrModal_header": "Enabling Magic Backups",
  "backups_manualToMagicrModal_subheader": "This will enable a Magic Backup of your Envoy wallet. Your Envoy seed will be encrypted and backed up to your Apple or Google account. Envoy data will be encrypted and sent to the Foundation Server.",
  "backups_primeMagicBackups": "Passport Prime Magic Backup\n”{MB_name}”",
...
  "component_apply": "Apply",
  "component_areYouSure": "Are you sure?",
  "component_back": "Back",
  "component_cancel": "Cancel",
  "component_confirm": "Confirm",
  "component_content": "Content",
  "component_continue": "Continue",
  "component_delete": "Delete",
  "component_device": "Device",
  "component_dismiss": "Dismiss",
  "component_done": "Done",
  "component_dontShowAgain": "Don’t show again",
  "component_exit": "Exit",
  "component_filter": "Filter",
  "component_filter_button_all": "All",
  "component_goToSettings": "Go to Settings",
  "component_learnMore": "Learn more",
  "component_minishield_buy": "Buy",
  "component_next": "Next",
  "component_no": "No",
  "component_notificationText": "Issue establishing Tor connectivity",
  "component_ok": "OK",
  "component_recover": "Recover",
  "component_recoverWithQR": "Recover with QR Code",
...
  "envoy_support_telegram": "Telegram",
  "envoy_welcome_screen_cta1": "Enable Magic Backups",
  "envoy_welcome_screen_cta2": "Manually Configure Seed Words",
  "envoy_welcome_screen_heading": "Create New Wallet",
  "envoy_welcome_screen_subheading": "For a seamless setup, we recommend enabling [[Magic Backups]].\n\nAdvanced users can manually create or restore a wallet seed.",
  "erase_wallet_with_balance_modal_CTA1": "Return to my Accounts",
  "erase_wallet_with_balance_modal_CTA2": "Delete Accounts anyway",
  "erase_wallet_with_balance_modal_subheading": "Before deleting your Envoy Wallet, please empty your Accounts. \nGo to Backups > Erase Wallets and Backups once you’re done.",
  "exploreAddresses_listFilter_unused": "Unused",
  "exploreAddresses_listFilter_used": "Used",
  "exploreAddresses_listFilter_zeroBalance": "0 Balance",
  "exploreAddresses_listModal_backToList": "Back to List",
  "exploreAddresses_listModal_content": "This address has been used at least once. When receiving Bitcoin it is a privacy best practice to use a new address.",
...
  "receive_qr_signMessage": "Sign Message",
  "receive_toast_addressCopied": "Address copied to clipboard.",
  "receive_tx_list_awaitingConfirmation": "Awaiting confirmation",
  "receive_tx_list_change": "Change",
  "receive_tx_list_receive": "Receive",
  "receive_tx_list_scan": "Scan",
  "receive_tx_list_send": "Send",
  "receive_tx_list_transfer": "Transfer",
  "receive_verifyModalCore_content": "Navigate to {AccountName} on Passport, choose ‘Account Tools’ then ‘Verify Address’ and scan the QR code below.",
  "receive_verifyModalPrime_content": "Tap the Account {AccountName} on Passport, choose ‘Verify Address’ and scan the QR code below.",
  "recovery_scenario_Android_instruction1": "Sign into Google and restore your backup data",
  "recovery_scenario_heading": "How to Recover?",
  "recovery_scenario_instruction2": "Install Envoy and tap “Set Up Envoy Wallet”",
...
  "tagged_tagDetails_emptyState_explainer": "There are no coins assigned to this tag.",
  "tagged_tagDetails_sheet_cta1": "Send Selected",
  "tagged_tagDetails_sheet_cta2": "Tag Selected",
  "tagged_tagDetails_sheet_retag_cta2": "Retag Selected",
  "tagged_tagDetails_sheet_transferSelected": "Transfer Selected",
  "tap_and_drag_first_time_text": "Hold to drag and reorder your accounts.",
  "taproot_passport_dialog_heading": "Taproot on Passport",
  "taproot_passport_dialog_later": "Do It Later",
  "taproot_passport_dialog_reconnect": "Reconnect Passport",
  "taproot_passport_dialog_subheading": "To enable a Passport Taproot account, ensure you are running firmware 2.3.0 or later and reconnect your Passport.",
  "toast_foundationServersDown": "Foundation servers are not reachable",
  "toast_newEnvoyUpdateAvailable": "New Envoy update available",
  "toast_repairingSuccessful_content": "Re-pairing with Prime was successful.",
...
