// SPDX-FileCopyrightText: 2022 Foundation Devices Inc.
//
// SPDX-License-Identifier: GPL-3.0-or-later

import 'dart:io';

import 'package:envoy/main.dart';
import 'package:envoy/ui/components/amount_widget.dart';
import 'package:envoy/ui/home/cards/accounts/detail/coins/coin_balance_widget.dart';
import 'package:envoy/ui/home/cards/accounts/detail/coins/coins_switch.dart';
import 'package:envoy/ui/theme/envoy_icons.dart';

//import 'package:envoy/ui/widgets/card_swipe_wrapper.dart';
import 'package:envoy/ui/widgets/envoy_amount_widget.dart';
import 'package:envoy/util/console.dart';
import 'package:flutter/cupertino.dart';
import 'package:flutter/foundation.dart';
import 'package:flutter/material.dart';
import 'package:flutter_test/flutter_test.dart';
import 'package:package_info_plus/package_info_plus.dart';
import 'util.dart';

Future<void> main() async {
  // Start the global timer
  final Stopwatch stopwatch = Stopwatch()..start();

  final FlutterExceptionHandler? originalOnError = FlutterError.onError;
  FlutterError.onError = (FlutterErrorDetails details) {
    kPrint('FlutterError caught: ${details.exceptionAsString()}');
    if (originalOnError != null) {
      originalOnError(details);
    }
  };

  if (Platform.isLinux) {
    await resetLinuxEnvoyData();
  }

  await initSingletons(integrationTestsRunning: true);
  await resetEnvoyData();

  group('Hot wallet tests', () {
    // These tests use wallet which is set up from zero (no need for passport account)
    testWidgets('<Buy ATM filter by country first and flow to map>',
        (tester) async {
      final stopwatch = Stopwatch()..start(); // Start timer

      await tester.pumpWidget(const EnvoyApp());

      await setUpAppFromStart(tester);
      await tester.pump(Durations.long2);
      await fromHomeToBuyOptions(tester, selectFirstCountryAvailable: false);

      await tester.pump(Durations.long2);

      await tester.pump(Durations.long2);
      final atmTab = find.text("ATMs");

      await tester.pumpUntilFound(atmTab,
          tries: 100, duration: Durations.long2);
      await tester.pump(Durations.long2);
      expect(atmTab, findsOneWidget);
      await tester.tap(atmTab);
      await tester.pump(Durations.long2);

      final continueButtonFinder = find.text('Continue');
      expect(continueButtonFinder, findsOneWidget);
      await tester.tap(continueButtonFinder);
      await tester.pump(Durations.long2);
      await tester.pump(Durations.long2);
      await tester.pump(Durations.long2);

      final iconFinder = find.byWidgetPredicate(
        (widget) => widget is EnvoyIcon && widget.icon == EnvoyIcons.plus,
      );
      expect(iconFinder, findsOneWidget);

      await tester.pump(Durations.long2);
      await tester.pump(Durations.long2);

      final iconLocationFinder = find.byWidgetPredicate(
        (widget) => widget is EnvoyIcon && widget.icon == EnvoyIcons.location,
      );

      expect(iconLocationFinder, findsAny);
      await tester.tap(iconLocationFinder.last);
      await tester.pump(Durations.long2);
      await tester.pump(Durations.long2);

      // Check that the ATM name widget is present.
      // If found, it indicates that the map has loaded correctly for the specified region (Granada, Spain).
      final atmName = find.text("Kurant Bitcoin ATM");
      expect(atmName, findsAny);

      // exit maps so it won't bug on the next test
      await findAndTapPopUpEnvoyIcon(tester, EnvoyIcons.close);
      await findAndPressEnvoyIcon(tester, EnvoyIcons.close);

      stopwatch.stop();
      debugPrint(
          '⏱ Test took ${(stopwatch.elapsedMilliseconds / 1000).toStringAsFixed(2)} s');
    });
    testWidgets('<Buy button>', (tester) async {
      final stopwatch = Stopwatch()..start(); // Start timer
      await goBackHome(tester);

      await findAndPressBuyOptions(tester);
      await checkBuyOptionAndTitle(tester);

      stopwatch.stop();
      debugPrint(
        '⏱ Test took ${(stopwatch.elapsedMilliseconds / 1000).toStringAsFixed(2)} s',
      );
    });
    testWidgets('<Buy button - enable from Settings>', (tester) async {
      final stopwatch = Stopwatch()..start(); // Start timer

      await goBackHome(tester);

      // Find the Buy button (enabled in Settings by default)
      final buyButtonFinder = find.descendant(
        of: find.byType(GestureDetector),
        matching: find.text('Buy'),
      );
      expect(buyButtonFinder, findsOneWidget);

      // now turn it off from settings
      await fromHomeToAdvancedMenu(tester);
      await findAndToggleSettingsSwitch(tester, "Buy in Envoy");

      // back to Accounts
      await pressHamburgerMenu(tester);
      await pressHamburgerMenu(tester);

      expect(buyButtonFinder, findsNothing);

      stopwatch.stop();
      debugPrint(
        '⏱ Test took ${(stopwatch.elapsedMilliseconds / 1000).toStringAsFixed(2)} s',
      );
    });
    testWidgets('<About>', (tester) async {
      final stopwatch = Stopwatch()..start(); // Start timer

      await goBackHome(tester);

      await pressHamburgerMenu(tester);
      await goToAbout(tester);
      final version = await PackageInfo.fromPlatform();
      final appVersion =
          find.text("${version.version} (${version.buildNumber})");
      expect(appVersion, findsOneWidget);

      final showButton = find.text('Show');
      expect(showButton, findsExactly(3));
      await tester.tap(showButton.first);
      await tester.pump(Durations.long2);
      await tester.pump(Durations.long2);
      await tester.pump(Durations.long2);

      final licensePage = find.text('Licenses');
      expect(licensePage, findsOneWidget);

      stopwatch.stop();
      debugPrint(
        '⏱ Test took ${(stopwatch.elapsedMilliseconds / 1000).toStringAsFixed(2)} s',
      );
    });
    testWidgets('<Check support buttons in settings>', (tester) async {
      final stopwatch = Stopwatch()..start(); // Start timer

      await goBackHome(tester);

      await pressHamburgerMenu(tester);
      await goToSupport(tester);
      // check buttons
      await goToDocumentation(tester);
      await goToCommunity(tester);
      await goToEmail(tester);

      stopwatch.stop();
      debugPrint(
        '⏱ Test took ${(stopwatch.elapsedMilliseconds / 1000).toStringAsFixed(2)} s',
      );
    });
    testWidgets('<Flow to edit acc name>', (tester) async {
      final stopwatch = Stopwatch()..start(); // Start timer

      await goBackHome(tester);

      await fromHomeToHotWallet(tester);
      await openDotsMenu(tester);
      await fromDotsMenuToEditName(tester);

      await enterTextInField(tester, find.byType(TextField), 'What ever');
      await exitEditName(tester);
      await checkName(tester, 'Mobile Wallet'); // check if the name is the same

      await openDotsMenu(tester);
      await fromDotsMenuToEditName(tester);

      await enterTextInField(tester, find.byType(TextField),
          'Twenty one characters plus ten'); // 30 chars
      await saveName(tester);
      await checkName(
          tester, 'Twenty one character'); // it needs to cut text (chars 20/20)

      // Rename hot wallet back to "Mobile Wallet" if you want to repeat the test locally
      await openDotsMenu(tester);
      await fromDotsMenuToEditName(tester);

      await enterTextInField(tester, find.byType(TextField), 'Mobile Wallet');
      await saveName(tester);

      await goBackHome(tester); // force test to Home

      stopwatch.stop();
      debugPrint(
        '⏱ Test took ${(stopwatch.elapsedMilliseconds / 1000).toStringAsFixed(2)} s',
      );
    });
    testWidgets('<Testing Prompts for Wallets with Balances>', (tester) async {
      final stopwatch = Stopwatch()..start(); // Start timer

      await goBackHome(tester);

      await clearPromptStates(tester);

      String tapTheAboveCardPrompt = "Tap the above card to receive Bitcoin.";
      Finder firstPrompt = find.text(tapTheAboveCardPrompt);
      expect(firstPrompt, findsOneWidget);

      // check Dismiss button functionality
      final dismissButton = find.text('Dismiss');
      await tester.tap(dismissButton);
      await tester.pump(Durations.long2);
      firstPrompt = find.text(tapTheAboveCardPrompt);
      expect(firstPrompt, findsNothing);

      // Clear prompt states
      await clearPromptStates(tester);
      firstPrompt = find.text(tapTheAboveCardPrompt);
      expect(firstPrompt, findsOneWidget);

      // Dismiss prompt via opening account
      await fromHomeToHotWallet(tester);
      // tap again to exit
      await fromHomeToHotWallet(tester);
      firstPrompt = find.text(tapTheAboveCardPrompt);
      expect(firstPrompt, findsNothing);

      // Clear prompt states
      await clearPromptStates(tester);
      firstPrompt = find.text(tapTheAboveCardPrompt);
      expect(firstPrompt, findsOneWidget);

      // Enable testnet
      final continueButtonFromDialog = find.text('Continue');
      await fromHomeToAdvancedMenu(tester);
      await findAndToggleSettingsSwitch(tester, "Testnet");
      await tester.tap(continueButtonFromDialog);
      await tester.pump(Durations.long2);
      await pressHamburgerMenu(tester); // back to settings menu
      await pressHamburgerMenu(tester);

      String tapTheAboveCardsPrompt =
          "Tap any of the above cards to receive Bitcoin.";
      Finder secondPrompt = find.text(tapTheAboveCardsPrompt);
      expect(secondPrompt, findsOneWidget);

      //Disable Testnet
      await fromHomeToAdvancedMenu(tester);
      await findAndToggleSettingsSwitch(tester, "Testnet");

      //Enable Signet
      await findAndToggleSettingsSwitch(tester, "Signet");
      await tester.tap(continueButtonFromDialog);
      await tester.pump(Durations.long2);
      await pressHamburgerMenu(tester);
      await pressHamburgerMenu(tester);

      secondPrompt = find.text(tapTheAboveCardsPrompt);
      expect(secondPrompt, findsOneWidget);

      //Disable Signet
      await fromHomeToAdvancedMenu(tester);
      await findAndToggleSettingsSwitch(tester, "Signet");

      //Enable Taproot
      await findAndToggleSettingsSwitch(tester, "Receive to Taproot");
      await pressHamburgerMenu(tester);
      await pressHamburgerMenu(tester);

      secondPrompt = find.text(tapTheAboveCardPrompt);
      expect(secondPrompt, findsOneWidget);

      // check Dismiss button functionality
      await tester.tap(dismissButton);
      await tester.pump(Durations.long2);
      secondPrompt = find.text(tapTheAboveCardsPrompt);
      expect(secondPrompt, findsNothing);

      // Enable Segwit
      await fromHomeToAdvancedMenu(tester);
      await findAndToggleSettingsSwitch(tester, "Receive to Taproot");

      stopwatch.stop();
      debugPrint(
        '⏱ Test took ${(stopwatch.elapsedMilliseconds / 1000).toStringAsFixed(2)} s',
      );
    });
    testWidgets('<Test decimal point in Send>', (tester) async {
      final stopwatch = Stopwatch()..start(); // Start timer

      await goBackHome(tester);

      await pressHamburgerMenu(tester);
      await tapSettingsButton(tester);

      bool isSettingsViewSatsSwitchOn =
          await isSlideSwitchOn(tester, 'View Amount in Sats');

      /// Check that the Amount is in BTC
      if (isSettingsViewSatsSwitchOn) {
        // find And Toggle DisplayFiat Switch
        await findAndToggleSettingsSwitch(tester, 'View Amount in Sats');
      }
      // Go back to Home
      await pressHamburgerMenu(tester);
      await pressHamburgerMenu(tester);

      await fromHomeToHotWallet(tester);

      final sendButtonText = find.text("Send");
      await tester.pumpUntilFound(sendButtonText,
          tries: 10, duration: Durations.long1);
      await tester.tap(sendButtonText.last);
      await tester.pump(Durations.long2);
      await tester.pump(Durations.long2);
      await tester.pump(Durations.long2);

      await tester.drag(find.byType(Scrollable).first, const Offset(0, -200));
      await tester.pump();

      await findAndPressTextButton(tester, '.');
      await tester.pump(Durations.long2);
      // Check the main amount to see if pressing the dot was successful.
      final sendAmount = find.text("0.");
      expect(sendAmount.first, findsOneWidget);

      await goBackHome(tester);

      stopwatch.stop();
      debugPrint(
        '⏱ Test took ${(stopwatch.elapsedMilliseconds / 1000).toStringAsFixed(2)} s',
      );
    });
    testWidgets('<Delete wallet warning pt.1>', (tester) async {
      final stopwatch = Stopwatch()..start(); // Start timer

      await goBackHome(tester);

      // go to backups
      await pressHamburgerMenu(tester);
      await tapSettingsButton(tester, buttonText: "BACKUPS");

      // press erase wallet
      await findAndPressTextButton(tester, "Erase Mobile Wallet and Backups");

      // skip two dialogs
      await findAndTapPopUpText(tester, "Continue");
      await findAndTapPopUpText(tester, "Continue");

      // check that the warning dialog did not pop
      final textFinder = find.text("Keep Your Seed Private");
      await tester.pumpUntilFound(textFinder,
          tries: 10, duration: Durations.long1);

      stopwatch.stop();
      debugPrint(
        '⏱ Test took ${(stopwatch.elapsedMilliseconds / 1000).toStringAsFixed(2)} s',
      );
    });
  });

  group('Passport wallet tests', () {
    // Below tests require already set up wallet with passport and coins
    testWidgets('<Magic recovery from Foundation server>', (tester) async {
      final stopwatch = Stopwatch()..start(); // Start timer

      // Wallet for BEEFQA: this seed has magic recovery enabled on the Foundation server
      const List<String> seed = [
        "minor",
        "inspire",
        "domain",
        "sport",
        "radio",
        "put",
        "museum",
        "sure",
        "dose",
        "peanut",
        "home",
        "comfort"
      ];

      await tester.pumpWidget(const EnvoyApp());
      await setUpWalletFromSeedViaBackupFile(tester, seed);

      stopwatch.stop();
      debugPrint(
        '⏱ Test took ${(stopwatch.elapsedMilliseconds / 1000).toStringAsFixed(2)} s',
      );
    });
    testWidgets('<Pump until balance sync>', (tester) async {
      final stopwatch = Stopwatch()..start(); // Start timer

      await checkSync(tester);

      stopwatch.stop();
      debugPrint(
        '⏱ Test took ${(stopwatch.elapsedMilliseconds / 1000).toStringAsFixed(2)} s',
      );
    });
    testWidgets('<Activity text alignment>', (tester) async {
      final stopwatch = Stopwatch()..start();

      await goBackHome(tester);
      await checkSync(tester);
      await findAndPressTextButton(tester, "Activity");

      checkActivityAlignment(tester);

      /// Turn the Fiat OFF
      // Go to settings
      await pressHamburgerMenu(tester);
      await tapSettingsButton(tester);

      // Check that the fiat toggle exists
      bool isSettingsFiatSwitchOn =
          await isSlideSwitchOn(tester, 'Display Fiat Values');

      // If it is ON, turn it OFF
      if (isSettingsFiatSwitchOn) {
        // find And Toggle DisplayFiat Switch
        await findAndToggleSettingsSwitch(tester, 'Display Fiat Values');
      }

      // go back to Activity
      await pressHamburgerMenu(tester);
      await pressHamburgerMenu(tester);

      checkActivityAlignment(tester);

      /// Turn the Fiat back ON
      // Go to settings
      await pressHamburgerMenu(tester);
      await tapSettingsButton(tester);

      // Check that the fiat toggle exists
      isSettingsFiatSwitchOn =
          await isSlideSwitchOn(tester, 'Display Fiat Values');

      // If it is OFF, turn it ON
      if (!isSettingsFiatSwitchOn) {
        // find And Toggle DisplayFiat Switch
        await findAndToggleSettingsSwitch(tester, 'Display Fiat Values');
      }

      // go back to Home
      await goBackHome(tester);

      stopwatch.stop();
      debugPrint(
        '⏱ Test took ${(stopwatch.elapsedMilliseconds / 1000).toStringAsFixed(2)} s',
      );
    });
    testWidgets('<Delete wallet warning pt.2>', (tester) async {
      final stopwatch = Stopwatch()..start(); // Start timer

      await goBackHome(tester);

      // go to backups
      await pressHamburgerMenu(tester);
      await tapSettingsButton(tester, buttonText: "BACKUPS");

      // press erase wallet
      await findAndPressTextButton(tester, "Erase Mobile Wallet");

      // skip two dialogs
      await findAndTapPopUpText(tester, "Continue");
      await findAndTapPopUpText(tester, "Continue");

      // check that the warning dialog did pop
      final warningDialogFinder = find.text("Delete Accounts anyway");
      await tester.pumpUntilFound(warningDialogFinder,
          tries: 10, duration: Durations.long1);

      stopwatch.stop();
      debugPrint(
        '⏱ Test took ${(stopwatch.elapsedMilliseconds / 1000).toStringAsFixed(2)} s',
      );
    });
    testWidgets('<Test taproot modal>', (tester) async {
      final stopwatch = Stopwatch()..start(); // Start timer
      await goBackHome(tester);

      // make sure it is disabled
      await pressHamburgerMenu(tester);
      await tapSettingsButton(tester);
      await openAdvancedMenu(tester);
      bool taprootAlreadyEnabled =
          await isSlideSwitchOn(tester, "Receive to Taproot");
      if (taprootAlreadyEnabled) {
        // Disable it!
        await findAndToggleSettingsSwitch(tester, "Receive to Taproot");
        await tester.pump(Durations.extralong4);
        await tester.pump();
        await findAndPressTextButton(tester, "Confirm");
        await tester.pump(Durations.extralong4);
        await tester.pump();
      }

      const String accountPassportName = "Taproot modal test";

      // go to home
      await pressHamburgerMenu(tester);
      await pressHamburgerMenu(tester);

      /// Before enabling taproot, go to this account and tap receive, check that pop up does NOT show up
      await scrollHome(tester, -600);

      // go to acc
      await findAndPressTextButton(tester, accountPassportName);
      await findAndPressTextButton(tester, "Receive");
      await tester.pump(Durations.extralong4);
      await tester.pump();

      // find no pop-up
      final taprootFinder = find.text("Taproot on Passport");
      expect(taprootFinder, findsNothing);

      // go back
      //await pressHamburgerMenu(tester);
      await findAndPressTextButton(tester, "Accounts");
      await findAndPressTextButton(tester, accountPassportName);

      /// Then go to the descriptor and check that the pop up does NOT show up
      // open menu
      await findAndPressIcon(tester, Icons.more_horiz_outlined);
      await tester.pump(Durations.extralong4);
      await tester.pump();
      await findAndPressTextButton(tester, "SHOW DESCRIPTOR");
      await tester.pump(Durations.extralong4);
      await tester.pump();
      // find no pop-up
      expect(taprootFinder, findsNothing);

      /// Then enable taproot form settings, check the pop up shows
      // go back to settings
      //await pressHamburgerMenu(tester);
      await findAndPressTextButton(tester, "Accounts");
      await tester.pump(Durations.long2);
      await pressHamburgerMenu(tester);
      await tapSettingsButton(tester);
      await openAdvancedMenu(tester);

      // Enable it
      await findAndToggleSettingsSwitch(tester, "Receive to Taproot");
      await tester.pump(Durations.extralong4);
      await tester.pump();
      await findAndPressTextButton(tester, "Confirm");
      await tester.pump(Durations.extralong4);
      await tester.pump();

      /// Tap Do it later
      await findAndPressTextButton(tester, "Do It Later");
      await tester.pump(Durations.extralong4);
      await tester.pump();

      /// Go to this account, tap receive, check pop up shows
      // go back to accounts
      await pressHamburgerMenu(tester);
      await pressHamburgerMenu(tester);

      // go to acc
      await findAndPressTextButton(tester, accountPassportName);
      await tester.pump(Durations.extralong4);
      await tester.pump();
      await findAndPressTextButton(tester, "Receive");
      await tester.pump(Durations.extralong4);
      await tester.pump();

      /// Tap Do it later
      await findAndPressTextButton(tester, "Do It Later");
      await tester.pump(Durations.extralong4);
      await tester.pump();

      // go back to acc
      //await pressHamburgerMenu(tester);
      await findAndPressTextButton(tester, "Accounts");
      await tester.pump(Durations.long2);
      await findAndPressTextButton(tester, accountPassportName);
      await tester.pump(Durations.long2);

      /// Go to show descriptor for this account, check pop up shows
      // open menu
      await findAndPressIcon(tester, Icons.more_horiz_outlined);
      await tester.pump(Durations.extralong4);
      await tester.pump();
      await findAndPressTextButton(tester, "SHOW DESCRIPTOR");
      await tester.pump(Durations.extralong4);
      await tester.pump();

      /// Tap Do it later
      await findAndPressTextButton(tester, "Do It Later");
      await tester.pump(Durations.extralong4);
      await tester.pump();

      /// Check a segwit receive address is displayed
      // already checking this in another test

      /// Check a segwit descriptor shows
      await findTextOnScreen(tester, "Segwit");

      /// Go to another passport account paired after 2.3.0
      // go back to home
      //await pressHamburgerMenu(tester);
      await findAndPressTextButton(tester, "Accounts");
      await findAndPressTextButton(tester, "Primary (#0)");

      /// Tap receive, check that pop up does NOT show up
      await findAndPressTextButton(tester, "Receive");
      await tester.pump(Durations.extralong4);
      await tester.pump();

      // find no pop-up
      expect(taprootFinder, findsNothing);

      /// Go to descriptor, check that pop up does NOT show up
      // go back to home
      //await pressHamburgerMenu(tester);
      await findAndPressTextButton(tester, "Accounts");
      await tester.pump(Durations.long2);
      await findAndPressTextButton(tester, "Primary (#0)");
      await tester.pump(Durations.long2);

      // open menu
      await findAndPressIcon(tester, Icons.more_horiz_outlined);
      await tester.pump(Durations.extralong4);
      await tester.pump();
      await findAndPressTextButton(tester, "SHOW DESCRIPTOR");
      await tester.pump(Durations.extralong4);
      await tester.pump();
      // find no pop-up
      expect(taprootFinder, findsNothing);

      await goBackHome(tester); // force test to Home

      stopwatch.stop();
      debugPrint(
        '⏱ Test took ${(stopwatch.elapsedMilliseconds / 1000).toStringAsFixed(2)} s',
      );
    });
    testWidgets('<Testing Prompts for Wallets with Balances>', (tester) async {
      final stopwatch = Stopwatch()..start(); // Start timer

      await goBackHome(tester);

      await disableAllNetworks(tester);
      await clearPromptStates(tester);

      String tapTheAboveCardsPrompt =
          "Tap any of the above cards to receive Bitcoin.";
      Finder tapCardsPromptFinder = find.text(tapTheAboveCardsPrompt);
      await tester.pumpUntilFound(tapCardsPromptFinder);

      // Dismiss prompt via opening account
      await fromHomeToHotWallet(tester);
      // tap again to exit
      await fromHomeToHotWallet(tester);

      await scrollHome(tester, -1200);
      await tester.pump(Durations.long2);
      await tester.pump(Durations.long2);
      await tester.pump(Durations.long2);

      String swipeBalancePrompt = "Swipe to show and hide your balance.";
      Finder swipeBalancePromptFinder = find.text(swipeBalancePrompt);
      await tester.pumpUntilFound(swipeBalancePromptFinder);

      // check Dismiss button functionality
      final dismissButton = find.text('Dismiss');
      await tester.tap(dismissButton);
      await tester.pump(Durations.long2);
      swipeBalancePromptFinder = find.text(swipeBalancePrompt);
